# mtm_hw2

./: CMakeLists.txt  README.md  examDetails.cpp  examDetails.h  run_part_a.sh
auto_testing/: Auxiliaries.cpp  Auxiliaries.h  DiscreteGenerator.h  Generator.h  GeneratorExceptions.h  GroupComparisonGenerator.h  InvocationGenerator.h  Invoker.h  PtrArray.cpp  PtrArray.h  SingleItemGenerator.h  TupleGenerator.h  autot_part_a.cpp  autot_part_b.cpp
part_a/: SortedList.h  Todo  examDetails.cpp  examDetails.h  main.cpp  part_a_outputR.txt  part_a_test.cpp  testClass.h  test_from_group.cpp
part_b/: Auxiliaries.h  Board.h  Character.cpp  Character.h  Exceptions.h  Game.cpp  Game.h  Makefile  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  TIleItem.cpp  TileItem.h  board_test.cpp  game_test.cpp  questions.txt
submission/partA/: sortedList.h
submission/partB/: Exceptions.h  Game.cpp  Medic.cpp  Medic.h  Sniper.cpp  Soldier.h  TileItem.cpp  TileItem.h
tests/: partC_tester.cpp
