add_compile_options(-std=c++11 -Wall -Werror -pedantic-errors -DNDEBUG)
add_executable(exam_system part_a/main.cpp)
add_executable(part_a_test part_a/part_a_test.cpp)
add_executable(game part_b/game_test.cpp part_b/Auxiliaries.cpp part_b/Game.cpp part_b/TileItem.cpp)
add_executable(board part_b/board_test.cpp part_b/Auxiliaries.cpp)
